do full a work of unlocking note

--- a/app/src/main/res/layout/layout_password_unlock.xml
+++ b/app/src/main/res/layout/layout_password_unlock.xml
@@ -2,20 +2,21 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" android:padding="10dp">
+    <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/textView3"
+            android:text="@string/enter_password"
+            android:layout_alignParentTop="true"
+            android:layout_height="wrap_content" android:textSize="24sp" android:textAlignment="center"/>
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text|textPassword"
             android:ems="10"
-            android:id="@+id/passwordUnlock.textPassword"
-            android:layout_alignParentTop="true"/>
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/passwordUnlock.textStatus"
-            android:layout_below="@id/passwordUnlock.textPassword"
-            android:layout_above="@id/passwordUnlock.buttonCancel"/>
+            android:id="@+id/passwordUnlock.textPassword" android:layout_below="@id/textView3"
+            android:textAlignment="center" android:padding="10dp" android:layout_marginTop="10dp"
+            android:gravity="center_vertical"/>
     <Button
             android:text="@string/cancel"
             android:layout_width="wrap_content"
