--- a/app/src/main/res/layout/card_note_view.xml
+++ b/app/src/main/res/layout/card_note_view.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+        android:id="@+id/card_item"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,9 +26,9 @@
                 android:text="@string/action"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/cardView.textAction"
+                android:id="@+id/cardItem.textAction"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@id/cardView.hideContent"
+                android:layout_toStartOf="@id/cardItem.hideContent"
                 android:layout_alignParentEnd="false"
                 android:layout_toEndOf="@id/cardView.privacyState"
                 android:textAlignment="center"
@@ -36,13 +36,13 @@
         <Button
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:id="@+id/cardView.hideContent"
+                android:id="@+id/cardItem.hideContent"
                 android:layout_alignParentEnd="true"/>
         <TextView
                 android:text="@string/description"
                 android:layout_width="match_parent"
-                android:id="@+id/cardView.textDescription"
-                android:layout_below="@id/cardView.textAction"
+                android:id="@+id/cardItem.textDescription"
+                android:layout_below="@id/cardItem.textAction"
                 android:layout_alignParentBottom="false"
                 android:textSize="24sp"
                 android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_below="@id/cardView.textDescription"
+                android:layout_below="@id/cardItem.textDescription"
                 android:layout_height="32dp"
                 android:id="@+id/card_view.MenuBar"
                 android:visibility="invisible">
