--- a/app/src/main/res/layout/card_note_view.xml
+++ b/app/src/main/res/layout/card_note_view.xml
@@ -6,7 +6,7 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="12dp"
+        card_view:cardCornerRadius="20dp"
         card_view:cardBackgroundColor="#1B90D6"
         card_view:contentPadding="10dp"
         android:layout_margin="10dp">
@@ -16,12 +16,12 @@
         <ImageView
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/flag_green_active"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:id="@+id/cardView.privacyState"
                 android:contentDescription="@string/action"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true" android:layout_above="@id/cardItem.textDescription"/>
         <TextView
                 android:text="@string/action"
                 android:layout_width="wrap_content"
@@ -32,22 +32,23 @@
                 android:layout_alignParentEnd="false"
                 android:layout_toEndOf="@id/cardView.privacyState"
                 android:textAlignment="center"
-                android:textSize="18sp" android:singleLine="true"/>
+                android:textSize="24sp"
+                android:singleLine="true"/>
         <Button
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:id="@+id/cardItem.hideContent"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentEnd="true" android:layout_above="@id/cardItem.textDescription"/>
         <TextView
                 android:text="@string/description"
                 android:layout_width="match_parent"
                 android:id="@+id/cardItem.textDescription"
                 android:layout_below="@id/cardItem.textAction"
-                android:layout_alignParentBottom="false"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:gravity="start|center_vertical"/>
+                android:gravity="start|center_vertical"
+                android:maxLines="3"/>
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
