--- a/app/src/main/res/layout/fragment_notes_group.xml
+++ b/app/src/main/res/layout/fragment_notes_group.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/background_light"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            android:id="@+id/notesGroup.recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                android:id="@+id/notesGroup.recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
-    <android.support.design.widget.FloatingActionButton
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/add_note"
-            android:id="@+id/notesGroup.createNewNote"
-            app:backgroundTint="#00695C"
-            android:layout_margin="10dp"/>
-
-</RelativeLayout>
+        </android.support.v7.widget.RecyclerView>
+        <android.support.design.widget.FloatingActionButton
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/add_note"
+                android:id="@+id/notesGroup.createNewNote"
+                android:layout_gravity="bottom|end"
+                app:backgroundTint="#00695C"
+                android:layout_margin="10dp"/>
+</android.support.design.widget.CoordinatorLayout>
